made a change in html content for learning process

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
    <hr />
     <p>
       Today: mostly cloudy right now and temperature is -3°.
-      Tonight, the maximum expected temperature is -9°.
+      Tonight, the maximum will probably be -9°.
     </p>
   <hr />
 
