--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
         </div>
       </div>
       <footer>
-        <a herf= "https://github.com/Bad-Grass/shecodesproject"
-  Coded by Badgrass></a>_Laure Malherbe Ramel | April 2021 
+        <a herf= "https://github.com/Bad-Grass/shecodesproject">
+  Coded by Badgrass</a>_Laure Malherbe Ramel | April 2021 
 </footer>     
  
     </div>
