--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
         </div>
       </div>
       <footer>
-        <a herf="https://github.com/Bad-Grass/shecodesproject/" target="_blank" >
+        <a href="https://www.shecodes.io/">SheCodes</a>
+        <a herf="https://github.com/Bad-Grass/shecodesproject/" target="_blank">
   Open Source Code by Badgrass</a>_Laure Malherbe Ramel | April 2021 
 </footer>     
  
